test/fail/actor-reference-crc8.mo
// actor references

let _ = actor "ic:C0FEFED00D42";  // does not validate
